2015-04-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/floats.c (_Gm_convert_fp16_to_fp32)
	(_Gm_convert_fp24_to_fp32): Fix Coverity 10094 "Logically dead
	code".

	* coders/pcx.c (ReadPCXImage): Fix Coverity 10197 "Negative loop
	bound".

	* coders/wpg.c (UnpackWPG2Raster): Always test for EOF from
	ReadBlobByte().  Should fix Coverity 10205 "Negative loop bound".

2015-04-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pcx.c (ReadPCXImage): Add some more integer-overflow
	safety to computations.  Add some casts.

	* coders/meta.c (formatIPTC): Fix Coverity 10221 "Infinite loop".

	* magick/attribute.c (GenerateEXIFAttribute): Fix Coverity 10320
	"Untrusted array index read" and "Untrusted loop bound".

2015-04-24  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/gif.c (ReadGIFImage): Attempt to fix Coverity issue
	10284 by using "opacity = (header[3] & 0xff)".

2015-04-23  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* magick/blob.c (ReadBlobMSBLong, ReadBlobLSBLong): Attempt
	to fix various "tainted" or "untrusted" variables
	by masking off all but the lower 32 bits returned.

2015-04-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xcf.c (ReadXCFImage): Fix Coverity 10216 "Integer
	overflowed argument".

	* magick/transform.c (FlipImage): Fix Coverity 61461 "Division or
	modulo by zero".

	* coders/gif.c: Protect against integer overflow in array size
	calculations.  Used unsigned type for colormap index.

2015-04-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/map.c (ReadMAPImage): Maybe quiet Coverity 10326
	"Untrusted pointer read".

	* magick/utility.c (GlobExpression): See if testing for null
	terminating character quiets Coverity 10246 "Untrusted value as
	argument".

	* magick/transform.c (FlipImage): Possibly quiet case #4 of
	Coverity 10311 "Untrusted value as argument".

	* magick/utility.c (Base64Encode): Quiet Coverity 10296 and 10272